4 solo queda añadir uno bien

--- a/src/app/especifico/especifico.page.html
+++ b/src/app/especifico/especifico.page.html
@@ -7,4 +7,31 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content> My ID is: {{ id }} </ion-content>
+<ion-content padding> El id: {{ id }} 
+ 
+    <ion-item>
+      <ion-label>Nombre</ion-label>
+      <ion-input [(ngModel)]="document.data.nombre"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Sexo</ion-label>
+      <ion-input [(ngModel)]="document.data.sexo"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Nivel</ion-label>
+      <ion-input [(ngModel)]="document.data.nivel"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Raza</ion-label>
+      <ion-input [(ngModel)]="document.data.raza"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label>Clase</ion-label>
+      <ion-input [(ngModel)]="document.data.clase"></ion-input>
+    </ion-item>
+    
+      <ion-button (click)="clicBotonBorrar()">Borrar PJ</ion-button>
+      <ion-button (click)="clicBotonModificar()">Modificar PJ</ion-button>
+    
+  </ion-content>
+
