--- a/src/app/especifico/especifico.page.html
+++ b/src/app/especifico/especifico.page.html
@@ -10,23 +10,23 @@
 <ion-content padding> El id: {{ id }} 
  
     <ion-item>
-      <ion-label>Nombre</ion-label>
+      <ion-label>Nombre: </ion-label>
       <ion-input [(ngModel)]="document.data.nombre"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Sexo</ion-label>
+      <ion-label>Sexo: </ion-label>
       <ion-input [(ngModel)]="document.data.sexo"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Nivel</ion-label>
+      <ion-label>Nivel: </ion-label>
       <ion-input [(ngModel)]="document.data.nivel"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Raza</ion-label>
+      <ion-label>Raza: </ion-label>
       <ion-input [(ngModel)]="document.data.raza"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label>Clase</ion-label>
+      <ion-label>Clase: </ion-label>
       <ion-input [(ngModel)]="document.data.clase"></ion-input>
     </ion-item>
     
