--- a/src/app/armory/armory.page.html
+++ b/src/app/armory/armory.page.html
@@ -4,28 +4,29 @@
       <ion-back-button (click)="navigateToInicio()"></ion-back-button>
     </ion-buttons>
     <ion-title>
-      Acerca de
+      Armeria de World of Warcraft
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <h1>Base de datos de videojuegos Dofus</h1>
+  <h1>Contiene el equipo de todos los jugadores junto a su nivel.</h1>
   <p>Contamos con una detallada base de datos.</p>
 </ion-content>
+
 <ion-footer class="pie">
   <ion-toolbar>
     <ion-buttons class="botones-footer">
-      <ion-button class="button-footer" (click)=navigateToConfigurador()>
-        <ion-icon name="laptop" size="large"></ion-icon>
+      <ion-button class="button-footer" (click)=navigateToArmory()>
+        <ion-icon name="menu" size="large"></ion-icon>
       </ion-button>
 
       <ion-button class="button-footer" (click)=navigateToInformacion()>
-        <ion-icon name="watch" size="large"></ion-icon>
+        <ion-icon name="call" size="large"></ion-icon>
       </ion-button>
       
-      <ion-button class="button-footer" (click)=navigateToAbout()>
-        <ion-icon name="today" size="large"></ion-icon>
+      <ion-button class="button-footer" (click)=navigateToUbicacion()>
+        <ion-icon name="paper-plane" size="large"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
