--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -15,6 +15,7 @@ ion-title {
 @media (orientation: landscape) {
     .pie {
         justify-content: center;
+        --ion-background-color: rgb(40, 241, 181);
     }
 }
 
