--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,15 +1,17 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-title>Inicia Sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding class="form-content">
   <form class="form" [formGroup]="validations_form" (ngSubmit)="tryLogin(validations_form.value)">
+    
     <ion-item>
-      <ion-label position="floating" color="primary">Introduce tu e-mail</ion-label>
+      <ion-label position="floating">Introduce tu e-mail</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
+
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.email">
         <div class="error-message" *ngIf="validations_form.get('email').hasError(validation.type) && (validations_form.get('email').dirty || validations_form.get('email').touched)">
@@ -17,10 +19,13 @@
         </div>
       </ng-container>
     </div>
+
+
     <ion-item>
-      <ion-label position="floating" color="primary">Introduce tu contraseña</ion-label>
+      <ion-label position="floating">Introduce tu contraseña</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
+
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validation_messages.password">
         <div class="error-message" *ngIf="validations_form.get('password').hasError(validation.type) && (validations_form.get('password').dirty || validations_form.get('password').touched)">
@@ -28,11 +33,13 @@
         </div>
       </ng-container>
     </div>
+
+
     <ion-button class="submit-btn" expand="block" type="submit" [disabled]="!validations_form.valid">Inicia sesión</ion-button>
     <label class="error-message">{{errorMessage}}</label>
   </form>
   
   <p class="go-to-register">
-    ¿No tienes una cuenta? <a (click)="goRegisterPage()">Creala ahora aquí.</a>
+    ¿No tienes una cuenta? <a (click)="paginaRegistro()">Creala ahora aquí.</a>
   </p>
 </ion-content>
