--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-title>Registrarse</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -8,7 +8,7 @@
   <form class="form" [formGroup]="validations_form" (ngSubmit)="tryRegister(validations_form.value)">
 
     <ion-item>
-      <ion-label position="floating" color="primary">Introduce tu email</ion-label>
+      <ion-label position="floating" >Introduce tu email</ion-label>
       <ion-input type="text" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -20,7 +20,7 @@
     </div>
 
     <ion-item>
-      <ion-label position="floating" color="primary">Introduce tu contraseña</ion-label>
+      <ion-label position="floating">Introduce tu contraseña</ion-label>
       <ion-input type="password" formControlName="password"></ion-input>
     </ion-item>
     <div class="validation-errors">
@@ -35,6 +35,6 @@
     <label class="error-message">{{errorMessage}}</label>
     <label class="success-message">{{successMessage}}</label>
   </form>
-  <p class="go-to-login">¿Ya tienes una cuenta? <a (click)="goLoginPage()">Inicia sesión.</a></p>
+  <p class="go-to-login">¿Ya tienes una cuenta? <a (click)="paginaInicio()">Inicia sesión.</a></p>
 
 </ion-content>
