--- a/src/app/ubicacion/ubicacion.page.scss
+++ b/src/app/ubicacion/ubicacion.page.scss
@@ -13,7 +13,7 @@ ion-title {
 
 @media (orientation: landscape) {
     .pie {
-        height: 0;
-        visibility: collapse;
+        justify-content: center;
+        --ion-background-color: rgb(40, 241, 181);
     }
 }
